syntax = "proto3";

package edu.uci.ics.amber.engine.common;

import "scalapb/scalapb.proto";


option (scalapb.options) = {
  scope: FILE,
  preserve_unknown_fields: false
  no_default_values_in_constructor: true
};

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message Backpressure {
  bool enable_backpressure = 1;
}

message CreditUpdate {
}

message ActorCommand {
  oneof sealed_value {
      Backpressure backpressure = 1;
      CreditUpdate credit_update = 2;
  }
}

message PythonActorMessage {
  ActorCommand payload = 1 [(scalapb.field).no_box = true];
}